# read-gpx

./: .gitignore  Makefile  README.md  dibujar_ruta.py  extraer_gpx.py  procesar_directorio.sh  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
src/read_gpx/: __init__.py  cli.py  parser.py  smart_html.py  visualizer.py
tests/: test_parser.py  test_smart_html.py  test_visualizer.py
