[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "read-gpx"
version = "0.1.0"
description = "Extrae datos de archivos GPX y los convierte a CSV"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gpxpy>=1.6.0",
    "pandas>=2.0.0",
]

[project.scripts]
read-gpx = "read_gpx.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
