[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "read-gpx"
version = "0.1.0"
description = "Librería Python para extraer y visualizar datos de archivos GPX"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["gpx", "gps", "tracks", "fitness", "pandas", "maps"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "gpxpy>=1.6.0",
    "pandas>=2.0.0",
    "folium>=0.18.0",
    "matplotlib>=3.9.0",
    "geopy>=2.4.1",
]

[project.scripts]
read-gpx = "read_gpx.cli:main"
dibujar-ruta = "read_gpx.cli:dibujar_ruta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
